# mais

./: .all-contributorsrc  .flake8  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pylintrc  404.html  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py  sitemap.xml  sync_bucket.py
.github/: CONTRIBUTING.md  DATA_CHECK_SKIP.csv  FUNDING.yml  TABLE_APPROVE.md  push_table_to_bq.py  sync_bucket.py
.github/ISSUE_TEMPLATE/: br_bugs.md  br_nova_linguagem.md  br_novas_funcionalidades.md  br_novo_analista de dados  br_novos_dados.md  bug_report.md  bugs.md  en_bug_report.md  en_feature_request.md  en_new_data.md  feature_request.md  language-request.md  language_request.md  new_data.md  nova-linguagem.md  nova_linguagem.md  novas-funcionalidades.md  novas_funcionalidades.md  novos-dados.md  novos_dados.md  version-request.md
.github/PULL_REQUEST_TEMPLATE/: en_feature.md  new_data.md
.github/workflows/: add-to-cloudtask.yml  build-docs.yml  check-data.yml  check-links.yml  data-check.yml  deploy-docs.yml  docs.yml  etl-caged.yml  link-check.yml  lint_python.yaml  meta-check.yml  metadata-validate.yml  metadata_check.yml  (+7 more)
access_data_bq/: index.html
access_data_packages/: index.html
api_reference_cli/: index.html
api_reference_python/: index.html
api_reference_r/: index.html
api_reference_stata/: index.html
basedosdados/: __init__.py  base.py  cli.py  dataset.py  download.py  exceptions.py  storage.py  table.py  utils.py
br_ibge_pam/: README.md  dataset_config.yaml
colab_checks/: index.html
colab_data/: index.html
colab_infrastructure/: index.html
css/: custom.css
docs/: access_data_bq.md  access_data_local.md  access_data_packages.md  add_data.md  analysis.md  api_docs.md  api_reference_cli.md  api_reference_python.md  api_reference_r.md  api_reference_stata.md  cli_reference_api.md  colab.md  colab_checks.md  colab_data.md  colab_infrastructure.md  data_clean.md  data_naming_rules.md  data_quality.md  data_review.md  data_start.md  data_upload.md  datathon_2021.md  faq_error.md  fun_foreign_keys.md  fun_start.md  github.md  index.md  mkdocs.yml  naming_rules.md  odd_2021.md  original_README.md  py_reference_api.md  r_reference_api.md  reference_api.md  reference_api_cli.md  reference_api_py.md  reference_api_r.md  requirements-docs.txt  style_data.md  style_naming_columns.md  (+7 more)
en/: index.html
es/: index.html
examples/: bd_for_beginners.ipynb  bd_odd_2021.ipynb  script.R
js/: custom.js  termynal.js
overrides/: main.html
pt/: index.html
python-package/: .all-contributorsrc  .flake8  README.md  develop.sh  enable-git-hooks.sh  gera_relatorio_frequencia_atualizacoes.py  pyproject.toml  requirements-dev.txt  sample.csv  setup.py  test.py
python-package/basedosdados/: Untitled.ipynb  __init__.py  __main__.py  _version.py  _warnings.py  backend.py  base.py  cli.py  constants.py  dataset.py  download.py  exceptions.py  storage.py  table.py
python-package/basedosdados/backend/: __init__.py
python-package/basedosdados/cli/: cli.py
python-package/basedosdados/configs/: config.toml
python-package/basedosdados/configs/templates/dataset/: dataset_description.txt
python-package/basedosdados/configs/templates/table/: table_config.yaml  table_description.txt
python-package/basedosdados/core/: base.py  config.toml
python-package/basedosdados/download/: base.py  download.py  metadata.py
python-package/basedosdados/queries/: dataset_by_id.graphql  dataset_table_by_id.graphql  organization_by_id.graphql
python-package/basedosdados/schemas/: columns_schema.json  dataset_schema.json  table_schema.json
python-package/basedosdados/templates/dataset/: dataset_description.txt
python-package/basedosdados/templates/table/: publish.sql  table_description.txt
python-package/basedosdados/upload/: base.py  connection.py  dataset.py  datatypes.py  metadata.py  remoteapi.py  storage.py  table.py  utils.py  validate.py
python-package/basedosdados/validation/: config.py
python-package/hooks/: pre-commit  pre-push
python-package/tests/: conftest.py  test_base.py  test_cli.py  test_dataset.py  test_datatype.py  test_download.py  test_metadata.py  test_storage.py  test_table.py  test_utils.py
python-package/tests/sample_data/: config.toml
python-package/tests/sample_data/table/: arquitetura_municipio.xlsx  municipio.avro  municipio.csv  municipio.parquet  publish.sql  publish_part.sql  table_config.yaml  table_config_part.yaml  table_config_part_wrong.yaml
python-package/tests/test_download/: test_download.py  test_metadata.py
python-package/tests/test_metadata_api/: test_metadata.py  test_metadata_api.py  test_publish.py
python-package/tests/tmp_bases/pytest/: README.md  dataset_config.yaml
python-package/tests/tmp_bases/pytest/pytest/: schema-prod.json  schema-staging.json  table_description.txt
python-package/tests/tmp_bases/pytest/pytest_partitioned/: schema-prod.json  table_description.txt
r-package/: .Rbuildignore  .Rhistory  .gitignore  Changelog.md  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md
rbdd/: .Rbuildignore  .Rhistory  DESCRIPTION
search/: search_index.json
src/: __init__.py  base.py  cli.py  core.py  dataset.py  download.py  storage.py  table.py
stata-package/: Minitutorial.md  README.md  basedosdados.dlg  basedosdados.pkg  basedosdados_download.do  bd_download.ado  bd_download.sthlp  bd_get_table_columns.ado  bd_get_table_columns.sthlp  bd_get_table_description.ado  bd_get_table_description.sthlp  bd_list_dataset_tables.ado  bd_list_dataset_tables.sthlp  bd_list_datasets.ado  bd_list_datasets.sthlp  bd_read_sql.ado  bd_read_sql.sthlp  bd_read_table.ado  bd_read_table.sthlp  examples.do  instrucoes.dlg  setup.do  stata.toc
style_data/: index.html
tests/: test_dataset.py  test_download.py  test_storage.py  test_table.py
tutorial_cross_tables/: index.html
tutorial_join_tables/: index.html
utils/: enable-git-hooks.sh
(+4613 files in other folders)
