[tool.poetry]
name = "mais"
version = "1.6.11-b1"
description = "Dependências do BD+, retiradas do pacote python"
authors = ["Mauricio Fagundes <mauricio.fagundes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.2.3"
mkdocs-click = "^0.5.0"
mkdocs-material = "^8.2.7"
mkdocstrings = "^0.18.1"
pwinput = "^1.0.2"
tomlkit = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
