[tool.poetry]
authors = ["Joao Carabetta <joao.carabetta@gmail.com>", "Ricardo Dahis", "Diego Oliveira"]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Organizar e facilitar o acesso a dados brasileiros através de tabelas públicas no BigQuery."
homepage = "https://github.com/base-dos-dados/bases"
license = "MIT"
name = "basedosdados"
packages = [
  {include = "basedosdados"},
]
readme = "README.md"
repository = "https://github.com/base-dos-dados/bases"
version = "2.0.0-beta.5"

[tool.poetry.scripts]
basedosdados = 'basedosdados.cli.cli:cli'

[tool.poetry.dependencies]
google-api-python-client = "^2.86.0"
google-cloud-bigquery = "^3.10.0"
google-cloud-bigquery-connection = "^1.12.0"
google-cloud-bigquery-storage = "^2.19.1"
google-cloud-storage = "^2.9.0"
gql = "^3.4.1"
loguru = "^0.7.0"
pandas = "^2.0.1"
pandas-gbq = "^0.19.2"
pandavro = "^1.7.2"
pydata-google-auth = "^1.8.0"
python = ">=3.8, <3.11"
requests-toolbelt = "^1.0.0"
tomlkit = "^0.11.8"
tqdm = "^4.65.0"

[tool.black]
# Use the more relaxed max line length permitted in PEP8.
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | build
  | dist
  | htmlcov
)/
'''
line-length = 88
target-version = ["py36", "py37", "py38", "py39"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[pytest]
addopts = "-p no:warnings"
